# flag_gpu

./: .gitignore  README.md  README_GB.md  install  lib  setVersion  src
controlled/beamformer/src/: .gitignore  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  fifo.c  flag_beamform_thread.c  flag_beamsave_thread.c  flag_databuf.h  flag_net_thread.c  libtool
controlled/beamformer_rt/src/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  flag_beamsave_thread.c  flag_databuf.h  flag_net_thread.c
controlled/correlator/dibas/: .dibas.conf.swp  BeamformerBackend.py  README  dibas.conf
controlled/correlator/src/: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  fifo.c  fifo.h  flag_correlator_thread.c  flag_corsave_thread.c  flag_databuf.c  flag_databuf.h  flag_net_thread.c  flag_transpose_thread.c  libtool
controlled/correlator/src/.deps/: fifo.Plo  flag_correlator_thread.Plo  flag_corsave_thread.Plo  flag_databuf.Plo  flag_net_thread.Plo  flag_transpose_thread.Plo
controlled/dibas/: BeamformerBackend.py  BeamformerBackend.py_gbt  README  dibas.conf
controlled/total_power/src/: .gitignore  Makefile.am  configure.ac  flag_databuf.h  flag_net_thread.c  flag_power_thread.c  flag_powersave_thread.c  flag_transpose_thread.c
dealer/: README  auto_dealer.py  dealergui.py
dealer/auto_dealer/: auto_dealer.py  auto_dealer_krcopy.py
dealer/player/: BeamformerBackend.py  dibas.conf.gbt
lib/beamformer/Debug/: bf_gpu_code  makefile  nsightbuilddata
lib/beamformer/src/: .gitignore  Makefile  beamformer_gpu.cu  beamformer_gpu.h  cublas_beamformer.cu  cublas_beamformer.h  cublas_main.cu  flag_beamformer.cu  flag_beamformer.h  test_beamformer.cu
lib/beamformer/utils/: Power_accumulation.m
lib/flagPower/: .Makefile.swp
lib/flagPower/src/: Makefile  test_total_power.c  total_power.cu  total_power.h
lib/grating/: Makefile  README.md  sample.out  tags
lib/grating/scripts/: interpret_fft_output.m  interpret_input.m  interpret_output.m
lib/grating/src/: grating.cu  grating.h
lib/grating/tools/: a.out  gendata  grating_gentestdata.c
lib/hashpipe/src/: .gitignore  configure.ac  hashpipe.c  hashpipe_databuf.c  hashpipe_databuf.h
lib/pfb/python/: flag_gen_coeff.py
lib/pfb/src/: Makefile  kernels.cu  kernels.h  kernels_no_scalloping.cu  kernels_no_scalloping.h  kernels_scalloping.h  main  pfb.cu  pfb.h  pfb_no_scalloping.cu  pfb_no_scalloping.h
lib/pfb/utils/: main.c  main.h
lib/pxGPU/src/: cpu_util.c  (+2 more)
lib/total_power/: .cproject  Makefile  test_total_power.c  total_power.cu  total_power.h
scripts/auto_dealer/: auto_dealer_7.py
scripts/player/: BeamformerBackend.py  BeamformerBackend.py_gbt  dibas.conf  dibas.conf.gbt
src/: .gitignore  Makefile.am  configure.ac  fifo.c  flag_beamform_thread.c  flag_beamsave_thread.c  flag_bx_save_thread.c  flag_bx_thread.c  flag_bx_transpose_thread.c  flag_correlator_thread.c  flag_corsave_thread.c  flag_databuf.c  flag_databuf.h  flag_dualsave_thread.c  flag_frb_correlator_thread.c  flag_frb_corsave_thread.c  flag_frb_transpose_thread.c  flag_net_thread.c  flag_pfb_correlator_thread.c  flag_pfb_corsave_thread.c  flag_pfb_thread.c  flag_pfb_transpose_thread.c  flag_pfbsave_thread.c  flag_pfbsave_thread.cu  flag_power_thread.c  flag_transpose_beamform_thread.c  flag_transpose_thread.c
src/m4/: check_cuda.m4  check_python.m4  flagbeamform.m4  flagpfb.m4  flagpower.m4  xgpu_frb.m4
src/src/: fifo.c  flag_beamsave_thread.c  flag_corsave_thread.c
src/src/m4/: xgpu_pfb.m4
src_old/: configure.ac  flag_frb_transpose_thread.c  flag_pfb_transpose_thread.c
src_old/m4/: flagpfb.m4
standalone/beamformer_rt/src/: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  flag_beamform_thread.c  flag_beamsave_thread.c  flag_databuf.h  flag_net_thread.c  flag_transpose_thread.c  libtool
standalone/beamformer_rt/src/.deps/: flag_beamform_thread.Plo  flag_beamform_thread.Tpo  flag_beamsave_thread.Plo  flag_databuf.Plo  flag_net_thread.Plo  flag_transpose_thread.Plo
standalone/beamformer_rt/src/autom4te.cache/: output.0  output.2  output.4  output.5  requests  traces.1  traces.3  traces.5
standalone/beamformer_rt/src/m4/: flagbeamform.m4  hashpipe.m4  xgpu.m4
utils/: .gitignore
utils/c_pkt_gen/: Makefile  bfpacketizer0.2
utils/correlator1_interpreter/: CalCorr_sim_output.m  PFB_sim_output.m  PFBcorr_sim_output.m  cor_mcnt_0.out  cor_mcnt_10.out  cor_mcnt_20.out  floatArray.out  int8_GPUin.out  interp_data.m
utils/dummy_fits_writer/: .gitignore  Makefile  dummy_fits_writer  dummy_fits_writer.c  fifo.c  fifo.h
utils/make_test_weight_file/: .gitignore  create_weight_file.m  weight_file.m
utils/pkt_gen/: dummy_weights.m  lower_triangular_plot.m  packet_gen.m  pulsarTest.m  sim3_bram_data.m
utils/real_time_displays/: beamformer_disp_gui.m  beamformer_display.m  total_power_display.m  total_power_gui.m
utils/shm_editor/: Makefile  shm_editor.c
utils/weight_calculator/: .gitignore  2016_01_15_23:36:23.fits  2016_01_15_23:41:56.fits  2016_01_15_23:47:29.fits  2016_01_15_23:53:02.fits  2016_01_15_23:59:50.fits  2016_01_16_00:05:18.fits  2016_01_16_00:10:47.fits  2016_01_16_00:16:21.fits  2016_01_16_00:21:59.fits  2016_01_16_00:27:40.fits  2016_01_16_00:34:26.fits  2016_01_16_00:40:21.fits  2016_01_16_00:46:14.fits  2016_01_16_00:52:05.fits  2016_01_16_00:57:55.fits  2016_01_16_01:03:43.fits  2016_01_16_01:12:09.fits  2016_01_16_01:17:42.fits  2016_01_16_01:23:15.fits  2016_01_16_01:28:48.fits  2016_01_16_01:34:21.fits  2016_01_16_01:39:54.fits  2016_01_16_01:46:06.fits  2016_01_16_01:51:41.fits  2016_01_16_01:57:16.fits  2016_01_16_02:02:52.fits  2016_01_16_02:08:28.fits  2016_01_16_16:48:43.fits  B_output_analysis.m  Plot_Convert_ThetaPhi2EleCorssEle.m  aggregate_data_set.m  extract_b_output.m  extract_covariances.m  gen_steering_vectors.m  get_antenna_positions.m  get_grid_weights.m  get_maxSNR_weights.m  global_params.m  hot_cold_data.m  (+13 more)
(+234 files in other folders)
